fix(site): don't stretch home page icon

--- a/src/site/components/HomePage/HomePage.module.css
+++ b/src/site/components/HomePage/HomePage.module.css
@@ -66,6 +66,7 @@
 
 .icon {
   max-width: 100%;
+  aspect-ratio: 1 / 1;
 }
 
 .title {
